Fixed Skip, modify layout sectionA, removed unused contract form and some other changes.

--- a/app/src/main/res/layout/activity_ending.xml
+++ b/app/src/main/res/layout/activity_ending.xml
@@ -13,7 +13,7 @@
 
         <variable
             name="form"
-            type="edu.aku.hassannaqvi.matiari_cohorts.models.FormsSL" />
+            type="edu.aku.hassannaqvi.matiari_cohorts.models.Forms" />
     </data>
 
     <ScrollView
