Fixed Update DB, SaveDraft and change color theme.

--- a/app/src/main/res/layout/activity_section_a.xml
+++ b/app/src/main/res/layout/activity_section_a.xml
@@ -4,12 +4,15 @@
     <data>
 
         <import type="android.view.View" />
-        <!--<variable
+
+        <variable
             name="form"
-            type="edu.aku.hassannaqvi.trackingofmatiaricohorts.models.Form" />-->
+            type="edu.aku.hassannaqvi.matiari_cohorts.models.Forms" />
+
         <variable
             name="callback"
             type="edu.aku.hassannaqvi.matiari_cohorts.ui.sections.SectionAActivity" />
+
     </data>
 
     <ScrollView
