--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,14 +2,14 @@
 <resources>
 
     <!-- App Theme Colors -->
-    <color name="colorPrimary">#01579b</color>
-    <color name="colorPrimary_overlay">#7f01579b</color>
-    <color name="colorPrimaryDark">#002f6c</color>
-    <color name="colorPrimaryDark_overlay">#7f002f6c</color>
-    <color name="colorPrimaryLight">#4f83cc</color>
-    <color name="colorPrimaryLight_overlay">#7f4f83cc</color>
-    <color name="colorAccent">#ccdb37</color>
-    <color name="colorAccent_overlay">#7fccdb37</color>
+    <color name="colorPrimary">#ec407a</color>
+    <color name="colorPrimary_overlay">#7fec407a</color>
+    <color name="colorPrimaryDark">#b4004e</color>
+    <color name="colorPrimaryDark_overlay">#7fb4004e</color>
+    <color name="colorPrimaryLight">#ff77a9</color>
+    <color name="colorPrimaryLight_overlay">#7fff77a9</color>
+    <color name="colorAccent">#000051</color>
+    <color name="colorAccent_overlay">#7f000051</color>
 
     <!-- Standard App Colors -->
     <color name="black">#000000</color>
