*Implemented mvvm working on functionality

--- a/app/src/main/res/layout/item_child_layout.xml
+++ b/app/src/main/res/layout/item_child_layout.xml
@@ -23,7 +23,7 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="match_parent">
 
                 <TextView
                     android:id="@+id/hhStatus"
@@ -80,7 +80,7 @@
 
                             <TextView
                                 android:id="@+id/childID"
-                                android:layout_width="wrap_content"
+                                android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:text="Child ID"
                                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
