--- a/app/src/main/res/layout/fragment_child_list.xml
+++ b/app/src/main/res/layout/fragment_child_list.xml
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content"
             android:background="@color/light_gray"
             app:layout_constraintTop_toBottomOf="@+id/checkLayout2"
-            tools:listitem="@layout/item_hh_layout">
+            tools:listitem="@layout/item_child_layout">
 
         </androidx.recyclerview.widget.RecyclerView>
 
