--- a/app/src/main/res/layout/child_end_dialog.xml
+++ b/app/src/main/res/layout/child_end_dialog.xml
@@ -32,7 +32,7 @@
             android:layout_marginBottom="28dp"
             android:drawablePadding="12dp"
             android:gravity="center_vertical"
-            android:text="Are you sure, you want to exit Child Module without saving?"
+            android:text="Are you sure, you want to continue this child module?"
             android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
             android:textColor="@color/black_overlay" />
 
