--- a/app/src/main/res/layout/sync_list_adapter.xml
+++ b/app/src/main/res/layout/sync_list_adapter.xml
@@ -15,9 +15,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="24dp"
-        android:layout_marginRight="24dp"
-
+        android:layout_margin="10dp"
         android:background="@color/white"
         app:cardCornerRadius="2dp"
         app:cardElevation="1dp">
