Working on UnclosedForms

--- a/app/src/main/res/layout/activity_section_a.xml
+++ b/app/src/main/res/layout/activity_section_a.xml
@@ -1293,8 +1293,7 @@
                         android:layout_height="wrap_content"
                         android:hint="@string/mc24"
                         android:inputType="number"
-                        android:maxLength="11"
-                        android:minLength="7"/>
+                        android:maxLength="11"/>
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
